crash when alt+LMB to change custom properties of different bones #90732

Closed
opened 2021-08-17 14:32:02 +02:00 by zyc17 · 11 comments

System Information
Operating system: macOS-10.14.6-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-12.10.25

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-16 16:57, hash: 4dba206011
Broken version: 2.92

Worked: 2.83.17 (fb67495c7f)

Short description of error
I have two bones A and B, A has a custom property name 'a', B has none, in pose mode, select B and shift select A, press alt+LMB click and slide to change the custom property 'a', crash happens every time. If B has a custom property but with a different name, crash happens as well

I know this operation doesn't make sense, you can't change a property that doesn't exist on some of the selected objects, but sometimes irrelevant bones are selected unintentionally, and crashes are annoying, if properties don't exist just do nothing

Exact steps for others to reproduce the error

  • Open .blend file
  • Select Bone A and add a custom property
  • Select bone B then {key Shift LMB} to select bone A
  • Edit custom property value with {key Alt LMB drag}
    #90732.blend
**System Information** Operating system: macOS-10.14.6-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-12.10.25 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-16 16:57, hash: `4dba206011` Broken version: 2.92 Worked: 2.83.17 (`fb67495c7f`) **Short description of error** I have two bones A and B, A has a custom property name 'a', B has none, in pose mode, select B and shift select A, press alt+LMB click and slide to change the custom property 'a', crash happens every time. If B has a custom property but with a different name, crash happens as well I know this operation doesn't make sense, you can't change a property that doesn't exist on some of the selected objects, but sometimes irrelevant bones are selected unintentionally, and crashes are annoying, if properties don't exist just do nothing **Exact steps for others to reproduce the error** - Open .blend file - Select Bone `A` and add a custom property - Select bone B then {key Shift LMB} to select bone A - Edit custom property value with {key Alt LMB drag} [#90732.blend](https://archive.blender.org/developer/F10291364/T90732.blend)
Author

Added subscriber: @389150029

Added subscriber: @389150029
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Thanks for the report. I can confirm on master.

Introduced between 4c26bb0232 and 48c8f9fc9a

(Can bisect but crash does not happen on ninja build)

Thanks for the report. I can confirm on master. ~~Introduced between `4c26bb0232` and `48c8f9fc9a`~~ ~~(Can bisect but crash does not happen on ninja build)~~
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

got a backtrace, but no additional info:

Program received signal SIGSEGV, Segmentation fault.
0x0000000000000080 in ?? ()
(gdb) backtrace
- 0  0x0000000000000080 in ?? ()
- 1  0x0000000004119d62 in RNA_property_float_get (ptr=0x7fffffffc890, prop=0x12dce400 <rna_PropertyGroupItem_double>)
    at /blender/source/blender/makesrna/intern/rna_access.c:3003
#2  0x00000000023e9f12 in ui_selectcontext_begin (C=0x60e000000048, but=0x61900077f688, selctx_data=0x6130005be190)
    at /blender/source/blender/editors/interface/interface_handlers.c:1842
#3  0x00000000023ef816 in ui_apply_but (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, data=0x6130005be048, interactive=true)
    at /blender/source/blender/editors/interface/interface_handlers.c:2234
#4  0x000000000240740b in ui_numedit_apply (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, data=0x6130005be048)
    at /blender/source/blender/editors/interface/interface_handlers.c:4186
#5  0x0000000002418c18 in ui_do_but_NUM (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, data=0x6130005be048, event=0x60d000488b98)
    at /blender/source/blender/editors/interface/interface_handlers.c:5389
#6  0x00000000024470ab in ui_do_button (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, event=0x60d000488b98)
    at /blender/source/blender/editors/interface/interface_handlers.c:7978
#7  0x0000000002456bb8 in ui_handle_button_event (C=0x60e000000048, event=0x60d000488b98, but=0x61900077f688)
    at /blender/source/blender/editors/interface/interface_handlers.c:9309
#8  0x000000000246f224 in ui_handler_region_menu (C=0x60e000000048, event=0x60d000488b98, UNUSED_userdata=0x6130005be048)
    at /blender/source/blender/editors/interface/interface_handlers.c:11332
#9  0x0000000000f8a4ce in wm_handler_ui_call (C=0x60e000000048, handler=0x6080000a4028, event=0x60d000488b98, always_pass=0)
    at /blender/source/blender/windowmanager/intern/wm_event_system.c:694
#10 0x0000000000fa1685 in wm_handlers_do_intern (C=0x60e000000048, event=0x60d000488b98, handlers=0x613000567598)
    at /blender/source/blender/windowmanager/intern/wm_event_system.c:2843
#11 0x0000000000fa29b0 in wm_handlers_do (C=0x60e000000048, event=0x60d000488b98, handlers=0x613000567598)
    at /blender/source/blender/windowmanager/intern/wm_event_system.c:2958
got a backtrace, but no additional info: ``` Program received signal SIGSEGV, Segmentation fault. 0x0000000000000080 in ?? () (gdb) backtrace - 0 0x0000000000000080 in ?? () - 1 0x0000000004119d62 in RNA_property_float_get (ptr=0x7fffffffc890, prop=0x12dce400 <rna_PropertyGroupItem_double>) at /blender/source/blender/makesrna/intern/rna_access.c:3003 #2 0x00000000023e9f12 in ui_selectcontext_begin (C=0x60e000000048, but=0x61900077f688, selctx_data=0x6130005be190) at /blender/source/blender/editors/interface/interface_handlers.c:1842 #3 0x00000000023ef816 in ui_apply_but (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, data=0x6130005be048, interactive=true) at /blender/source/blender/editors/interface/interface_handlers.c:2234 #4 0x000000000240740b in ui_numedit_apply (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, data=0x6130005be048) at /blender/source/blender/editors/interface/interface_handlers.c:4186 #5 0x0000000002418c18 in ui_do_but_NUM (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, data=0x6130005be048, event=0x60d000488b98) at /blender/source/blender/editors/interface/interface_handlers.c:5389 #6 0x00000000024470ab in ui_do_button (C=0x60e000000048, block=0x6170001a7f88, but=0x61900077f688, event=0x60d000488b98) at /blender/source/blender/editors/interface/interface_handlers.c:7978 #7 0x0000000002456bb8 in ui_handle_button_event (C=0x60e000000048, event=0x60d000488b98, but=0x61900077f688) at /blender/source/blender/editors/interface/interface_handlers.c:9309 #8 0x000000000246f224 in ui_handler_region_menu (C=0x60e000000048, event=0x60d000488b98, UNUSED_userdata=0x6130005be048) at /blender/source/blender/editors/interface/interface_handlers.c:11332 #9 0x0000000000f8a4ce in wm_handler_ui_call (C=0x60e000000048, handler=0x6080000a4028, event=0x60d000488b98, always_pass=0) at /blender/source/blender/windowmanager/intern/wm_event_system.c:694 #10 0x0000000000fa1685 in wm_handlers_do_intern (C=0x60e000000048, event=0x60d000488b98, handlers=0x613000567598) at /blender/source/blender/windowmanager/intern/wm_event_system.c:2843 #11 0x0000000000fa29b0 in wm_handlers_do (C=0x60e000000048, event=0x60d000488b98, handlers=0x613000567598) at /blender/source/blender/windowmanager/intern/wm_event_system.c:2958 ```

Added subscriber: @ChrisLend

Added subscriber: @ChrisLend
Christoph Lendenfeld self-assigned this 2022-11-24 18:37:48 +01:00

going to look at that. still an issue in 3.3

going to look at that. still an issue in 3.3
Philipp Oeser removed the
Interest
Animation & Rigging
label 2023-02-09 14:35:32 +01:00

stepping down from this since I couldn't fix it

stepping down from this since I couldn't fix it
Christoph Lendenfeld removed their assignment 2023-07-28 13:30:57 +02:00
Member

Will check

Will check
Philipp Oeser self-assigned this 2023-07-28 16:21:45 +02:00
Member

Fix in !112910

Fix in !112910
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-29 05:59:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90732
No description provided.