Fix #90732: crash on alt+LMB to change custom properties in some cases

This crashed when alt-editing a custom property that existed e.g. on one
bone but not on another.

To check validity there are two mechanisms:
- remove non-valid in UI_context_copy_to_selected_list()
- check in UI_context_copy_to_selected_check()

This PR takes the first route [similar to filtering out different
sequences that dont share common properties], custom properties on real
IDs (such as objects or scenes) were not affected [since they kind of go
the second route and provide a path for
UI_context_copy_to_selected_check() which then gets validated there].

Found the first route more readable though.